@@ -73,6 +73,7 @@ ConfigItem_except	*Find_except(char *host, short type);
 ConfigItem_tld		*Find_tld(char *host);
 ConfigItem_link		*Find_link(char *username, char *hostname, char *ip, char *servername);
 ConfigItem_ban 		*Find_ban(char *host, short type);
+ConfigItem_ban 		*Find_banEx(char *host, short type, short type2);
 ConfigItem_vhost	*Find_vhost(char *name);
 
 int			AllowClient(aClient *cptr, struct hostent *hp, char *sockhost);
@@ -152,11 +153,8 @@ extern aConfItem *attach_confs_host PROTO((aClient *, char *, int));
 extern int attach_Iline PROTO((aClient *, struct hostent *, char *));
 extern aConfItem *conf, *find_me PROTO(()), *find_admin PROTO(());
 extern aConfItem *count_cnlines PROTO((Link *));
-extern aSqlineItem *sqline;
 extern void det_confs_butmask PROTO((aClient *, int));
 extern int detach_conf PROTO((aClient *, aConfItem *));
-extern aSqlineItem *find_sqline_nick PROTO((char *));
-extern aSqlineItem *find_sqline_match PROTO((char *));
 extern aConfItem *det_confs_butone PROTO((aClient *, aConfItem *));
 extern char *find_diepass();
 extern char *find_restartpass();
@@ -313,7 +311,6 @@ extern void free_str_list PROTO((Link *));
 extern Link *make_link PROTO(());
 extern Ban *make_ban PROTO(());
 extern anUser *make_user PROTO((aClient *));
-extern aSqlineItem *make_sqline PROTO(());
 extern aConfItem *make_conf PROTO(());
 extern aClass *make_class PROTO(());
 extern aServer *make_server PROTO(());
