@@ -432,10 +432,10 @@ struct Message msgtab[] = {
 	{MSG_CLOSE, m_close, 0, MAXPARA, TOK_CLOSE, 0L},
 	{MSG_SILENCE, m_silence, 0, MAXPARA, TOK_SILENCE, 0L},
 	{MSG_AKILL, m_akill, 0, MAXPARA, TOK_AKILL, 0L},
-//	{MSG_SQLINE, m_sqline, 0, MAXPARA, TOK_SQLINE, 0L},
-//	{MSG_UNSQLINE, m_unsqline, 0, MAXPARA, TOK_UNSQLINE, 0L},
+	{MSG_SQLINE, m_sqline, 0, MAXPARA, TOK_SQLINE, 0L},
+	{MSG_UNSQLINE, m_unsqline, 0, MAXPARA, TOK_UNSQLINE, 0L},
 	{MSG_KLINE, m_kline, 0, MAXPARA, TOK_KLINE, 0L},
-//	{MSG_UNKLINE, m_unkline, 0, MAXPARA, TOK_UNKLINE, 0L},
+	{MSG_UNKLINE, m_unkline, 0, MAXPARA, TOK_UNKLINE, 0L},
 	{MSG_ZLINE, m_zline, 0, MAXPARA, TOK_ZLINE, 0L},
 	{MSG_UNZLINE, m_unzline, 0, MAXPARA, TOK_UNZLINE, 0L},
 	{MSG_RAKILL, m_rakill, 0, MAXPARA, TOK_RAKILL, 0L},
