@@ -2089,6 +2089,26 @@ ConfigItem_ban 	*Find_ban(char *host, short type)
 	return NULL;
 }
 
+ConfigItem_ban 	*Find_banEx(char *host, short type, short type2)
+{
+	ConfigItem_ban *ban;
+	
+	/* Check for an except ONLY if we find a ban, makes it
+	 * faster since most users will not have a ban so excepts
+	 * don't need to be searched -- codemastr
+	 */
+		
+	for (ban = conf_ban; ban; ban = (ConfigItem_ban *) ban->next)
+		if ((ban->flag.type == type) && (ban->flag.type2 == type2))
+			if (!match(ban->mask, host)) {
+				/* Person got a exception */
+				if (Find_except(host, type))
+					return NULL;
+				return ban;
+			}
+	return NULL;
+}
+
 
 int	AllowClient(aClient *cptr, struct hostent *hp, char *sockhost)
 {
